--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.datasource.url=jdbc:mysql://localhost:3306/stripe_assignment
 spring.datasource.username=root
 spring.datasource.password=Root@123
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=update
 spring.main.allow-circular-references=true
 server.port=9091
 
