--- a/pom.xml
+++ b/pom.xml
@@ -47,6 +47,12 @@
 			<version>2.3.0</version>
 		</dependency>
 
+		<dependency>
+    		<groupId>org.springdoc</groupId>
+    		<artifactId>springdoc-openapi-ui</artifactId>
+    		<version>1.6.4</version>
+		</dependency>
+
 
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
